force-app/main/default/objects/OutboundEmail__e/OutboundEmail__e.object-meta.xml
<CustomObject>
    <label>Outbound Email</label>
    <pluralLabel>255</pluralLabel>
</CustomObject>