force-app/main/default/objects/OutboundEmail__e/fields/IsBounced__c.field-meta.xml
<CustomField>
    <fullName>IsBounced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBounced</label>
    <type>Checkbox</type>
</CustomField>