force-app/main/default/objects/OutboundEmail__e/fields/LastOpenedDate__c.field-meta.xml
<CustomField>
    <fullName>LastOpenedDate__c</fullName>
    <label>LastOpenedDate</label>
    <type>DateTime</type>
</CustomField>