force-app/main/default/objects/OutboundEmail__e/fields/MessageIdentifier__c.field-meta.xml
<CustomField>
    <fullName>MessageIdentifier__c</fullName>
    <label>MessageIdentifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>