force-app/main/default/objects/OutboundEmail__e/fields/ThreadIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ThreadIdentifier__c</fullName>
    <description>Source&apos;s case thread Id - Used for linking email replies to the case.</description>
    <label>ThreadIdentifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>